Name:                cef3-raw-example
Version:             0.1.0
Synopsis:            CEF3 bindings usage example
License:             BSD3
License-File:        LICENSE
Author:              Maksymilian Owsianny, Daniel Austin
Maintainer:          Maksymilian.Owsianny@gmail.com
Bug-Reports:         https://github.com/haskell-ui/cef3-raw-example/issues
Category:            FFI
Build-Type:          Simple
Cabal-Version:       >=1.10

Source-Repository head
  type:     git
  location: https://github.com/haskell-ui/cef3-raw-example.git

Executable cef3-raw-example
  default-language:  Haskell2010
  hs-source-dirs:    src
  ghc-options:       -Wall -threaded

  build-depends:     base      >= 4.7
               ,     cef3-raw  == 0.1.*

  other-modules:     Common

  if os(linux)
    main-is:           Main-Linux.hs
  if os(windows)
    main-is:           Main-Windows.hs
    build-depends:     Win32

